Edit Authors to suit format given, added new line to EOF

--- a/Authors
+++ b/Authors
@@ -1,4 +1,4 @@
-The team members for this project are:
+# This file lists all contributors to the repository.
+
 1. Patrick Odhiambo <patty6339@gmail.com>
 2. Steve Murimi <murimi101@gmail.com>
-
